--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"fs": "^0.0.1-security",
 		"helmet": "^8.1.0",
 		"mysql2": "^3.15.1",
-		"sirv": "^3.0.2"
+		"sirv": "^3.0.2",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1"
 	}
 }
